# PowerSlider

./: .clang-format  .gitignore  .markdownlint.yaml  CMakeLists.txt  Config.cmake.in  FindPowerSlider.cmake  LICENCE  LICENSE  README.md  package.sh
.github/workflows/: push-master-ci.yml
cmake/: findQtPackage.cmake
example/: CMakeLists.txt  main.cpp
src/: Makefile  Makefile.Debug  Makefile.Release  PowerSlider.cpp  PowerSlider.h  PowerSlider.hpp  PowerSlider.pro  PowerSliderPlugin.cpp  PowerSliderPlugin.h  PowerSliderPlugin.hpp  PowerSliderPlugin.pro  main.cpp
